# fastapi-docker

./: .env  .gitignore  Dockerfile.dispatcher  Dockerfile.worker  Makefile  README.md  compose.yaml  main.py  pyproject.toml  pytest.ini  test-compose.yaml
alembic/: env.py
alembic/versions/: 20250515_1738_093c0fc36a7c_.py  20250516_1030_3ad9ac8f8b69_.py  20250516_1201_9609a7f88ff3_.py
db/: Dockerfile
dispatch-service/: api.py  config.py  database.py  main.py  model.py  schema.py
dispatch_service/: api.py  config.py  database.py  main.py  model.py
tests/: conftest.py  test_api.py
worker-service/: main.py
worker_service/: main.py
