[project]
name = "taxi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "docker>=7.1.0",
    "fastapi[all]>=0.115.12",
    "sqlalchemy>=2.0.41",
    "tenacity>=9.1.2",
    "whenever>=0.8.0",
]
